# pdfToQif

./: .gitignore  CHANGES.md  README.md  main.py  parsers.py  pyproject.toml  test_balances.py  test_suite.py
